@@ -1,7 +1,10 @@
 package com.github.makewheels.aitools;
 
+import cn.hutool.core.io.FileUtil;
+import cn.hutool.crypto.digest.DigestUtil;
 import cn.hutool.http.HttpUtil;
 import cn.hutool.poi.word.Word07Writer;
+import com.alibaba.fastjson.JSON;
 import com.github.makewheels.aitools.word.WordService;
 import com.github.makewheels.aitools.word.bean.Meaning;
 import com.github.makewheels.aitools.word.bean.Word;
@@ -12,8 +15,8 @@ import org.springframework.boot.test.context.SpringBootTest;
 
 import java.awt.*;
 import java.io.File;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 
 @SpringBootTest
 @Slf4j
@@ -21,15 +24,19 @@ public class WordTests {
     @Resource
     private WordService wordService;
 
-    private static final String FOLDER = "C:\\Users\\miuser\\Downloads\\words\\";
+    private static final String FOLDER = "C:/Users/miuser/Downloads/words";
 
-    private void downloadImages(List<Word> words) {
+    private File getImageFile(String word, String imagePromptMd5) {
+        return new File(FOLDER, word + "/" + imagePromptMd5 + ".png");
+    }
+
+    private void downloadImages(List<Word> words, Map<String, String> imageMap) {
         for (Word word : words) {
             for (Meaning meaning : word.getMeanings()) {
-                String imagePromptMd5 = meaning.getImagePromptMd5();
-                String imageUrl = meaning.getImageUrl();
-                File imageFile = new File(FOLDER, "images/" + imagePromptMd5 + ".png");
-                meaning.setImageFilePath(imageFile.getAbsolutePath());
+                File imageFile = getImageFile(word.getWord(), meaning.getImagePromptMd5());
+                String imagePrompt = meaning.getImagePrompt();
+                String imageUrl = imageMap.get(DigestUtil.md5Hex(imagePrompt));
+
                 log.info("下载文件 " + imageFile.getName() + " " + imageUrl);
                 HttpUtil.downloadFile(imageUrl, imageFile);
             }
@@ -46,23 +53,29 @@ public class WordTests {
             writer.addText(fontSmall, word.getPronunciation());
             for (Meaning meaning : word.getMeanings()) {
                 writer.addText(fontSmall, meaning.getPartOfSpeech() + meaning.getMeaningChinese());
-                writer.addText(fontSmall, meaning.getExampleEnglish() + " " + meaning.getExampleChinese());
-                writer.addPicture(new File(meaning.getImageFilePath()), 256, 256);
+                writer.addText(fontSmall, meaning.getExampleEnglish());
+                writer.addText(fontSmall, meaning.getExampleChinese());
+                File imageFile = this.getImageFile(word.getWord(), meaning.getImagePromptMd5());
+                if (imageFile.exists()) {
+                    writer.addPicture(imageFile, 192, 192);
+                }
                 writer.addText(fontSmall, "");
             }
             writer.addText(fontSmall, "");
+
+            File wordJsonFile = new File(FOLDER, word.getWord() + "/" + word.getWord() + ".json");
+            FileUtil.writeUtf8String(JSON.toJSONString(word, true), wordJsonFile);
         }
 
-        writer.flush(new File(FOLDER, "doc/" + System.currentTimeMillis() + ".docx"));
+        writer.flush(new File(FOLDER, System.currentTimeMillis() + ".docx"));
         writer.close();
     }
 
     @Test
-    public void test() {
-        List<String> wordList = Arrays.asList("你就随便生成几个常用的单词就行");
-        List<Word> words = wordService.getWordExplain(wordList);
-        this.downloadImages(words);
-        this.write(words);
-
+    public void getWordsExplain() {
+        List<Word> wordList = wordService.getWordExplain(List.of("Pick up  ,Bummer  ,Grab  "));
+//        Map<String, String> imageMap = wordService.getImage(wordList);
+//        this.downloadImages(wordList, imageMap);
+        this.write(wordList);
     }
 }
